--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/be5c8a837410560f3ca8989808c21df4.js";
+      var loaderUrl = buildUrl + "/1de4e3bedae2380dcefcac20dc0bad02.js";
       var config = {
-        dataUrl: buildUrl + "/1fd758053a45b2c0bf38df502cd36c11.data.gz",
-        frameworkUrl: buildUrl + "/d9801dfb1d511ef91545d055a472d749.js.gz",
-        codeUrl: buildUrl + "/e67fa1327301390d3d34a07de07eb460.wasm.gz",
+        dataUrl: buildUrl + "/ce45dc74abb0097fbea348408940c771.data.unityweb",
+        frameworkUrl: buildUrl + "/d9801dfb1d511ef91545d055a472d749.js.unityweb",
+        codeUrl: buildUrl + "/e67fa1327301390d3d34a07de07eb460.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "KatabasisEndlessRunner",
